# federation-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  books.graphql  docker-compose.yml  reviews.graphql  supergraph.yaml
books/: .pdm.toml  Dockerfile  app.py  pyproject.toml
gateway/: Dockerfile  index.js  package-lock.json  package.json  server.ts
reviews/: .pdm.toml  Dockerfile  app.py  pyproject.toml
